fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 
 .connect_link_image {
 	margin: 10px;
-	width: 60px;
+	width: 45px;
 	height: auto;
 }
 
